--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -40,5 +40,10 @@
             <version>3.1.0</version>
             <classifier>withdeps</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
     </dependencies>
 </project>
