--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -37,13 +37,23 @@
         <dependency>
             <groupId>org.pacesys</groupId>
             <artifactId>openstack4j</artifactId>
-            <version>3.1.0</version>
-            <classifier>withdeps</classifier>
+            <version>3.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+
+
+
     </dependencies>
+
+<repositories>
+    <repository>
+        <id>in-project</id>
+        <name>In Project Repo</name>
+        <url>file://${project.basedir}/libs</url>
+    </repository>
+</repositories>
 </project>
