--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -37,7 +37,8 @@
         <dependency>
             <groupId>org.pacesys</groupId>
             <artifactId>openstack4j</artifactId>
-            <version>3.1.1-SNAPSHOT</version>
+            <version>3.1.0</version>
+            <classifier>withdeps</classifier>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
