--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -34,17 +34,33 @@
             <groupId>com.net2plan.net2plan-gui</groupId>
             <artifactId>net2plan-gui-exec</artifactId>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.pacesys</groupId>
             <artifactId>openstack4j</artifactId>
             <version>3.1.0</version>
             <classifier>withdeps</classifier>
         </dependency>
+        -->
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.woorea/openstack-java-sdk -->
+
+        <dependency>
+            <groupId>org.pacesys</groupId>
+            <artifactId>openstack4j</artifactId>
+            <version>3.1.1-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
+    <repositories>
+        <repository>
+            <id>st-snapshots</id>
+            <name>sonatype-snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 </project>
