--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.pacesys</groupId>
             <artifactId>openstack4j</artifactId>
-            <version>3.1.1-SNAPSHOT</version>
+            <version>3.1.0</version>
+            <classifier>withdeps</classifier>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
         <dependency>
@@ -62,11 +63,5 @@
         </dependency>
 
     </dependencies>
-    <repositories>
-        <repository>
-            <id>st-snapshots</id>
-            <name>sonatype-snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
+
 </project>
