--- a/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
+++ b/Net2Plan-GUI/Net2Plan-GUI-Plugins/Net2Plan-NetworkDesign/pom.xml
@@ -70,6 +70,18 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.19</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11-ea+24</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>12-ea+10</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <repositories>
