--- a/Net2Plan-Launcher/pom.xml
+++ b/Net2Plan-Launcher/pom.xml
@@ -70,5 +70,16 @@
             <version>0.5.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11-ea+24</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>12-ea+10</version>
+        </dependency>
     </dependencies>
 </project>
